[tool.poetry]
name = "blog-dev-workflows"
version = "0.1.0"
description = "Central location for all my blog posts"
authors = ["cAtaman <chimaataman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.2.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ===================================
# ============   TOOLS   ============
# ===================================
[tool.ruff]
line-length = 120
exclude = [
    "**/build/",
]
target-version = "py312"

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for rule descriptions
# See https://docs.astral.sh/ruff/linter/ for tips on rule suppression
select = ["F", "E", "I", "W", "C901", "D", "UP", "ANN", "B", "TD"]
ignore = ["D1", "D2", "D413", "ANN101", "ANN002", "ANN003", "E731", "TD003"]
